@@ -139,7 +139,7 @@ public class RequestWatcherServiceImpl implements RequestWatcherService {
                 }
 
                 private void logRequestRegistryEntry(final RequestRegistryEntry entry, final StringBuilder logBuilder) {
-                    final Throwable trace = new Throwable();
+                    final Throwable trace = new FastThrowable();
                     {
                         final StackTraceElement[] stackTrace = entry.getStackTrace();
                         if (dontLog(stackTrace)) {
@@ -153,7 +153,7 @@ public class RequestWatcherServiceImpl implements RequestWatcherService {
                     {
                         // Sort the properties for readability
                         Map<String, String> sorted = new TreeMap<String, String>();
-                        for (Entry<String, String> propertyEntry : LogProperties.getPropertyMap().entrySet()) {
+                        for (Entry<String, String> propertyEntry : entry.getPropertyMap().entrySet()) {
                             String propertyName = propertyEntry.getKey();
                             String value = propertyEntry.getValue();
                             if (null != value) {
@@ -210,8 +210,8 @@ public class RequestWatcherServiceImpl implements RequestWatcherService {
     }
 
     @Override
-    public RequestRegistryEntry registerRequest(final HttpServletRequest request, final HttpServletResponse response, final Thread thread) {
-        final RequestRegistryEntry registryEntry = new RequestRegistryEntry(NUMBER.incrementAndGet(), request, response, thread);
+    public RequestRegistryEntry registerRequest(final HttpServletRequest request, final HttpServletResponse response, final Thread thread, final Map<String, String> propertyMap) {
+        final RequestRegistryEntry registryEntry = new RequestRegistryEntry(NUMBER.incrementAndGet(), request, response, thread, propertyMap);
         requestRegistry.add(registryEntry);
         return registryEntry;
     }
@@ -228,6 +228,20 @@ public class RequestWatcherServiceImpl implements RequestWatcherService {
             return requestWatcherTask.cancel();
         }
         return true;
+    }
+
+    // ----------------------------------------------------------------------------- //
+
+    static final class FastThrowable extends Throwable {
+
+        FastThrowable() {
+            super("tracked request");
+        }
+
+        @Override
+        public synchronized Throwable fillInStackTrace() {
+            return this;
+        }
     }
 
 }
